# py-jentropy

./: .gitignore  Makefile  README.rst  conf.py  pyproject.toml
jentropy/wordle/: __init__.py  __main__.py
jentropy/wordle/data/: pt5-wordlegame.txt
tests/: test_jentropy.py
